--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href='https://fonts.googleapis.com/css?family=Anek Telugu' rel='stylesheet'>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
-    <title>Game Marlon</title>
+    <title>Stars Ball</title>
 </head>
 <body>
     <header >
